recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:14: error: ';' expected but 'else' found.
	} else  {
          ^Koch:26: error: expected start of definition
	override def run() {
                 ^Koch:29: error: Unmatched closing brace '}' ignored here
}
^